midnight.css
/* ... */
.newChannel_f99b92 /* new channel */ {
	background: var(--bg-1) !important;
}
.chat__52833 /* chat + member list */,
.sidebar_ded4b5 /* channel sidebar */,
.privateChannels__93473 .scroller__4b984 /* dms list inner */,
#app-mount .innerHeader_afca2f:after /* channels and roles header shadow */,
.attachedBars_da3c74 /* reply bar underneath */ {
	background: none;
}
.selected__0b1ad .header__104ca, .clickable__2d589 .header__104ca:hover /* server name hover */ {
	background: var(--message-hover);
}
.message__80c10.replying_d7b6ad.selected_fd9051, .mouse-mode.full-motion .replying_d7b6ad:hover /* fix reply message hover */ {
	background: var(--background-message-highlight-hover);
}
div.message__80c10.replying_d7b6ad::before /* change reply message bar to neutral */ {
	background: var(--text-2);
}
.activeButtonChild__6e162 /* send button */ {
	color: var(--accent-2);
}
.container_ca50b9 /* user panel button strikethroughs */,
.numberBadge__50328 /* unread number badge */,
.toolbar__88c63 /* toolbar button strikethroughs */ {
	--status-danger: var(--accent-2);
}
.expandedFolderIconWrapper__458cf > svg[style="color: rgb(88, 101, 242);"] /* default color folder icons */ {
	color: var(--accent-3) !important;
}
.divider_b9338f /* unread divider */,
.mention__1afd3 /* NEW unread pill */,
.mentionsBar__4b47a /* channel list new mention pill */ {
	--status-danger: var(--accent-3);
}
.message__80c10.mentioned__58017:before /* mention message left edge */,
.botTagRegular_c89c9a /* OP tag */ {
	background: var(--accent-3);
}
.container__871ba.checked__6bdb0 /* settings checkbuttons */ {
	background: var(--accent-3) !important;
}
.mention__1afd3:active /* NEW unread pill when clicked */ {
	background: var(--accent-4);
}
path[fill='rgba(35, 165, 90, 1)'] {
	fill: var(--accent-3);
}
path[fill='var(--white-500)'] {
	fill: var(--text-0) !important;
}
.numberBadge__50328 /* dms number badge */,
.newMessagesBar__8b6d7 .barButtonBase__8fa46 /* unread bar */,
.botTagRegular_c89c9a /* bot tag */,
.endCap__95d53 /* unread divider */,
.lookFilled__19298.colorBrand_b2253e /* accent buttons */,
.lookFilled__19298.colorBrand_b2253e .defaultColor__77578 /* accent buttons */,
.lookFilled__19298.colorBrandNew_fd170a /* accent buttons */,
.lookFilled__19298.colorGreen__5f181 /* green buttons */,
.lookFilled__19298.colorRed_d6b062 /* red buttons */,
.lookFilled__19298.colorYellow_a62893 /* yellow buttons */,
.bar_edc096 /* NEW unread pill */,
.wrapper_d281dd:hover .childWrapper__01b9c, /* default server icon text */ 
.wrapper_d281dd.selected_f5ec8e .childWrapper__01b9c /* default server icon text */,
.colorDefault__0b482.focused__27621 /* menu option hover */,
.colorDefault__0b482.focused__27621 .caret_ce50ce /* popup menu hover caret */,
.colorDefault__0b482:active:not(.hideInteraction__2790e) /* menu option active */,
.colorDefault__0b482:active:not(.hideInteraction__2790e) .caret_ce50ce /* menu option active */,
.tabBar__73938 .addFriend__80542.addFriend__80542.addFriend__80542 /* add friend button */,
#app-mount .button__57d93 /* notice banner button */,
.interactive:hover /* mention hover */,
.uploadIcon__68f2c /* profile upload image */,
.focused_f6efd9 .userMenuUsername_f6de35 .userMenuText_a180af /* account switcher account hover */,
.dots_a97068 /* typing dots */,
.lookOutlined__46d54.colorWhite__43488 /* server banner buttons */,
.header__72166 /* server preview mode banner */,
.categoryItem_b1be5c.selectedCategoryItem__0bf4c,
.live_b195a5 /* streaming live */,
#app-mount .activeButton__7a550 /* member page pagination button */ ,
#app-mount .tooltipBrand__13fbc /* member page filter tooltip */ {
	color: var(--text-0);
}
#app-mount .button__57d93, .theme-light .button__57d93 /* notice banner button */,
.lookOutlined__46d54.colorWhite__43488 /* server banner buttons */ {
	border-color: var(--text-0);
}
#app-mount .button__57d93:hover {
	border-color: var(--text-0);
	background-color: var(--text-0);
}
.container__871ba /* settings checkbutton background */ {
	background: var(--bg-1) !important;
}
.container__871ba.checked__6bdb0 > .slider__41d94 > rect /* settings checkbutton circle */,
.userMenuItem__38a6a path[fill="var(--white-500)"] /* account switcher account hover */ {
	fill: var(--text-0);
}
.closeIcon_ae6326 path /* alert banner close icon */ {
	fill: currentColor;
}
.container__871ba > .slider__41d94 > rect /* settings checkbutton circle */ {
	fill: var(--text-1);
}
.mini_d6d84c .grabber_d2868c /* spotify bar handle */ {
	margin-top: 4px;
	border-width: 1px;
}
.grabber_d2868c /* settings slider handle */ {
	border-width: 0;
}
.button__66e8c.buttonColor_a6eb73 /* fix vc buttons */ {
	color: var(--text-4);
}
.button__66e8c.buttonColor_a6eb73:hover /* fix vc buttons hover */ {
	background-color: var(--hover);
	color: var(--text-3);
}
.iconBadge_fdf33a.isCurrentUserConnected_d9734f /* change server vc badge to neutral */ {
	background-color: var(--bg-1);
	color: var(--text-1);
}
.bannerVisible__191f6 .headerContent_ee8727 /* server name over banner image */,
#app-mount .categoryText_b65948 /* gif chooser category names */,
.searchTitle__66210 {
	color: white;
}
.gifIcon__5671b /* profile upload image gif chooser */ {
	background-color: white;
}
.controlIcon__25700 /* fix video maximize button */ {
	color: var(--text-1);
	opacity: 0.6;
}
.controlIcon__25700:hover /* fix video maximize button hover */ {
	opacity: 1;
}
::selection {
	background: var(--accent-4);
	color: var(--text-0);
}
.lookFilled__3dba3.select__0eb48 {
	border: none;
}
.checkbox_c7f690 /* channel checkboxes */ {
	border-color: var(--text-4) !important;
}

/* remove shadows */
#app-mount .header_f7f1f3 /* gif picker */ {
	box-shadow: none;
}
#app-mount .textContentFooter__5a630 /* forum post image fade */ {
	background: none;
}

/* change online indicator color */
rect[fill='#23a55a'],
svg[fill='#23a55a'] {
	fill: var(--online-indicator) !important;
}
/* ... */

